# tracker-embedded

./: .clangd  .gitignore  Cargo.toml  I2CPositionControl.ino  PROTOCOL.md  README.md  platformio.ini  protocol.md
src/: commands.rs  main.cpp  main.rs
