[package]
edition = "2021"
name    = "tracker-embedded-rs"
version = "0.1.0"

[dependencies]
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
pololu_tic = { git = "https://github.com/unl-rocketry/pololu_tic-rs.git" }
log = "0.4.25"
embedded-hal-bus = "0.3.0"
embedded-hal = "1.0.0"
mma8x5x = { path = "/home/g2/Downloads/mma8x5x-rs-master/" }
libm = "0.2.11"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
