[package]
edition = "2024"
name    = "tracker-embedded-rs"
version = "0.1.0"

[dependencies]
critical-section = "1.2"
embassy-executor = { version = "0.7", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4", features = ["generic-queue-8"] }
esp-alloc = { version = "0.6" }
esp-backtrace = { version = "0.15", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23", features = ["esp32", "unstable"] }
esp-hal-embassy = { version = "0.6", features = ["esp32"] }
esp-println = { version = "0.13", features = ["esp32", "log"] }
static_cell = { version = "2.1", features = ["nightly"] }
pololu_tic = "0.1"
log = "0.4"
embedded-hal-bus = "0.3"
embedded-hal = "1.0"
mma8x5x = { git = "https://github.com/G2-Games/mma8x5x-rs.git" }
libm = "0.2"
thiserror = { version = "2.0", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
